# elai-code

./: .elai-todos.json  .gitignore  CHANGELOG.md  COMPARATIVO_SHOPIFY_LAUTOS.md  CUSTO_REAL_ANALISES_NOKK.md  ELAI-CODE-DIFERENCIAIS-COMERCIAIS.md  ELAI.md  EXEMPLO_ANALISE_BID.md  GUIA_NEGOCIACAO_LAUTOS.md  INDEX_LAUTOS.md  MERCADO-ESTRATEGIA-ELAI-CODE.md  MODELO_ASSINATURA_NOKK.md  PARITY.md  PLANO-ACAO-100K-MES.md  PRECIFICACAO_FINAL_NOKK.md  PROMPT_CLAUDE_DESIGN.md  PROPOSTA_AUTOMACAO_LAUTOS.md  README.md  RESUMO_EXECUTIVO.txt  landing-elai-code.html  proposta-nokk-lautos.pptx
rust/: .gitignore  ANALISE_BATCHES.md  BATCHES_CHEAT_SHEET.md  CONTRIBUTING.md  Cargo.toml  ELAI.md  EXTENDED_THINKING_ANALYSIS.md  README.md  THINKING_SUMMARY.md
rust/.claw-agents/: agent-1775243868233132000.json  agent-1775243868233132000.md  agent-1775243868301236000.json  agent-1775243868301236000.md  agent-1777235090422244000.json  agent-1777235090422244000.md  agent-1777235090453409000.json  agent-1777235090453409000.md  agent-1777239473915093000.json  agent-1777239473915093000.md  agent-1777239473956179000.json  agent-1777239473956179000.md
rust/.elai/: ant_model_override.json
rust/.elai-agents/: agent-1775243868233132000.json  agent-1775243868233132000.md  agent-1775243868301236000.json  agent-1775243868301236000.md  agent-1777235090422244000.json  agent-1777235090422244000.md  agent-1777235090453409000.json  agent-1777235090453409000.md  agent-1777239473915093000.json  agent-1777239473915093000.md  agent-1777239473956179000.json  agent-1777239473956179000.md
rust/.omc/plans/: budget-limiter.md  deterministic-response-cache.md  dream-command.md  multi-provider-orchestrator.md  open-questions.md  skills-system.md  stats-and-providers-dashboard.md  structured-telemetry.md  swd-correction-turns.md  swd-myers-diff-visual.md  verify-command.md
rust/crates/api/: Cargo.toml
rust/crates/api/src/: client.rs  lib.rs  types.rs
rust/crates/api/src/orchestrator/: metrics.rs  mod.rs  orchestrator.rs  persistence.rs  provider.rs  types.rs
rust/crates/api/src/providers/: ant_models.rs  claude_code_spoof.rs  codex_bridge.rs  elai_provider.rs  go_client.rs  mod.rs  openai_compat.rs
rust/crates/api/tests/: client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs
rust/crates/claw-cli/: Cargo.toml
rust/crates/claw-cli/src/: args.rs  diff.rs  init.rs  input.rs  main.rs  swd.rs  tui.rs
rust/crates/code_index/: Cargo.toml
rust/crates/code_index/src/: chunker.rs  facts.rs  indexer.rs  lib.rs  progress.rs  walker.rs
rust/crates/code_index/src/chunker/: lang_query.rs  semantic.rs  window.rs
rust/crates/code_index/src/embed/: jina.rs  local.rs  mod.rs  ollama.rs
rust/crates/code_index/src/pdf/: chunker.rs  extractor.rs  indexer.rs  mod.rs
rust/crates/code_index/src/store/: memory.rs  mod.rs  sqlite_vec.rs
rust/crates/commands/: Cargo.toml
rust/crates/commands/src/: collection.rs  lib.rs  providers.rs  stats.rs  unlock_cmd.rs  user_commands.rs
rust/crates/compat-harness/src/: lib.rs
rust/crates/elai-cli/: Cargo.toml
rust/crates/elai-cli/assets/: tips.toml
rust/crates/elai-cli/src/: app.rs  args.rs  auth.rs  buddy_picker.rs  cheese_theme.rs  compact_llm.rs  diff.rs  dream.rs  init.rs  main.rs  render.rs  starter_picker.rs  swd.rs  thinking_footer.rs  tips.rs  tui.rs  tui_sink.rs  ultrathink.rs  unlock_event_tui.rs  updater.rs  verify.rs
rust/crates/lauto-pricing/: Cargo.toml
rust/crates/lauto-pricing/src/: bid.rs  lib.rs  patterns.rs  pdf.rs  pricing.rs  tier.rs  unit_econ.rs
rust/crates/lsp/src/: client.rs  lib.rs
rust/crates/plugins/: Cargo.toml
rust/crates/plugins/src/: hooks.rs  lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/sprites/: 001.ans  002.ans  003.ans  004.ans  005.ans  006.ans  007.ans  008.ans  009.ans  010.ans  011.ans  012.ans  013.ans  014.ans  015.ans  016.ans  017.ans  018.ans  019.ans  020.ans  021.ans  022.ans  023.ans  024.ans  025.ans  026.ans  027.ans  028.ans  029.ans  030.ans  031.ans  032.ans  033.ans  034.ans  035.ans  036.ans  037.ans  038.ans  039.ans  040.ans  (+111 more)
rust/crates/runtime/src/: attachment_store.rs  bootstrap.rs  budget.rs  claude_code_compat.rs  codex_compat.rs  compact.rs  config.rs  conversation.rs  file_ops.rs  global_config.rs  hooks.rs  lib.rs  mcp_stdio.rs  message_repair.rs  model_context.rs  oauth.rs  oneshot.rs  progress.rs  prompt.rs  remote.rs  response_cache.rs  sandbox.rs  secure_storage.rs  session.rs  skills.rs  tasks.rs  telemetry.rs  tool_output_budget.rs  usage.rs
rust/crates/runtime/src/auto_dream/: config.rs  lock.rs  mod.rs  prompt.rs
rust/crates/runtime/src/buddy/: collection.rs  generator.rs  hatch.rs  integration_tests.rs  mod.rs  orchestrator.rs  sprites.rs  types.rs  unlock_event.rs  unlock_integration.rs
rust/crates/runtime/src/tasks/: output.rs  progress.rs  registry.rs
rust/crates/runtime/src/tool_catalog/: loader.rs  mod.rs  pipeline.rs  (+1 more)
rust/crates/script-runner/: Cargo.toml
rust/crates/script-runner/src/: executor.rs  file_actions.rs  lib.rs  llm_updater.rs  main.rs
rust/crates/server/: .env.example  Cargo.toml  README.md  docker-compose.yml
rust/crates/server/docs/: README.md  serve.sh
rust/crates/server/migrations/: 001_saas_foundation.sql
rust/crates/server/script/: serve.sh
rust/crates/server/src/: auth.rs  db.rs  lib.rs  main.rs  permission_bridge.rs  runtime_bridge.rs  state.rs  streaming.rs
rust/crates/tools/: .gitignore  Cargo.toml
rust/crates/tools/assets/: builtin_tools.toml
rust/crates/tools/src/: builtin.rs  lib.rs  mcp_tool_source.rs
rust/docs/: lauto-proposta-nokk.md  progress-pattern.md  resumo.txt
rust/docs/editais_exemplo/: README.md
rust/docs/pricing/: EXECUTIVE_SUMMARY.md  belem_individual.json  demo-de-venda.md  demo_exercito_sp.json  demo_marinha_belem.json  demo_marinha_pe90008.json  exercito_individual.json  lauto_econ.json  marinha_pe90008_individual.json  modelos-precificacao-agentes-ia.md  unit-economics.md
rust/locales/: en.json  pt-BR.json
rust/scripts/: lauto_bid_demo.py  lauto_unit_econ.py
(+57 files in other folders)
