[package]
name = "commands"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
plugins = { path = "../plugins" }
runtime = { path = "../runtime" }
script-runner = { path = "../script-runner" }
rust-i18n.workspace = true
serde_json.workspace = true
