[package]
name = "elai-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "elai"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
clap = { version = "4", features = ["derive"] }
commands = { path = "../commands" }
dotenvy = "0.15"
compat-harness = { path = "../compat-harness" }
crossterm = "0.29"
pulldown-cmark = "0.13"
rustyline = "15"
runtime = { path = "../runtime" }
plugins = { path = "../plugins" }
serde_json.workspace = true
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tools = { path = "../tools" }
ratatui = "0.30.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
sha2 = "0.10"
hex = "0.4"
similar = "2"

[lints]
workspace = true
