[package]
name = "elai-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "elai"
path = "src/main.rs"

[features]
# Por default o binário inclui o backend de embedding local via fastembed.
# Targets sem prebuilt do ort (x86_64-apple-darwin, x86_64-unknown-linux-musl,
# aarch64-unknown-linux-musl) devem buildar com `--no-default-features` —
# `--embed-provider local` fica indisponível, mas `ollama`/`http` continuam
# funcionando.
default = ["embed-fastembed"]
embed-fastembed = ["code_index/embed-fastembed"]

[dependencies]
api = { path = "../api" }
code_index = { path = "../code_index", default-features = false, features = [
    "tree-sitter-langs",
    "vec-sqlite",
    "embed-http",
] }
clap = { version = "4", features = ["derive"] }
commands = { path = "../commands" }
dotenvy = "0.15"
compat-harness = { path = "../compat-harness" }
crossterm = "0.29"
pulldown-cmark = "0.13"
rustyline = "15"
runtime = { path = "../runtime" }
plugins = { path = "../plugins" }
rust-i18n.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
syntect = "5"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tools = { path = "../tools" }
ratatui = "0.30.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
sha2 = "0.10"
hex = "0.4"
similar = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
