[package]
name = "lauto-pricing"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Análise de unit economics e demo BID para a proposta Nokk × Lauto"

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[[bin]]
name = "lauto-unit-econ"
path = "src/bin/unit_econ.rs"

[[bin]]
name = "lauto-bid-demo"
path = "src/bin/bid_demo.rs"
