[package]
name = "plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
reqwest = { version = "0.12", features = ["blocking"] }
tar = "0.4"
flate2 = "1.0"
zip = "2"

[lints]
workspace = true
