[package]
name = "plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
code_index = { path = "../code_index", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tar = "0.4"
flate2 = "1.0"
zip = "2"

[lints]
workspace = true
