[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sha2 = "0.10"
filetime = "0.2"
glob = "0.3"
toml = "0.8"
lsp = { path = "../lsp" }
plugins = { path = "../plugins" }
code_index = { path = "../code_index", default-features = false }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
walkdir = "2"
dirs = "6"
base64 = "0.22"
fastrand.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
