[package]
name = "script-runner"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "script_runner"
path = "src/lib.rs"

[[bin]]
name = "script-runner"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true