[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
commands = { path = "../commands" }
code_index = { path = "../code_index" }
plugins = { path = "../plugins" }
tools = { path = "../tools" }
runtime = { path = "../runtime" }
async-stream = "0.3"
axum = { version = "0.8", features = ["macros", "ws"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "time"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
sha2.workspace = true
fastrand.workspace = true
ulid = "1"
chrono.workspace = true
anyhow.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]

[[bin]]
name = "elai-server"
path = "src/main.rs"

[lib]
name = "server"
path = "src/lib.rs"

[lints]
workspace = true
