[package]
name = "tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
plugins = { path = "../plugins" }
runtime = { path = "../runtime" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "native-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread"] }

[lints]
workspace = true
